--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
         <h1 id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
         <img src="https://instagram.frec3-2.fna.fbcdn.net/v/t51.2885-19/s150x150/68746666_451035408822072_2468069619110248448_n.jpg?_nc_ht=instagram.frec3-2.fna.fbcdn.net&_nc_ohc=NImM_5qL-rgAX9rINjC&tp=25&oh=c087668d44a57576c6d3884b7034a860&oe=5FDDE53D" alt="O criador deste site posa para uma foto com um lenço de pescoço preto e a mata de Brennand como plano de fundo.">
         <h2>💡 is the new black</h2>
-        <p>Brasileiro
-            🇧🇷, criado pelos becos e ruas do Recife e Jaboatão, Pernambuco.</p>
+        <p>Brasileiro, criado pelos becos e ruas do Recife, Pernambuco.</p>
+        <br>
+        <p>&</p>
+        <br>
+        <p>Criado pelos becos e ruas da Internet</p>
+        <br>
         <h3 id="habilidades">Habilidades</h3>
         <ul>
-            <li>Inglês fluente</li>
-            <li><strong>GIS</strong></li>
+            <li>Inglês</li>
+            <li><strong>Sistema de Informações Geográficas</strong></li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>Bash</li>
+            <li>Excel</li>
             <li>Illustator</li>
             <li>Photoshop</li>
         </ul>
