--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta lang="pt-br">
         <meta charset="UTF-8">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="estilo.css">
         <title>BCVMN Portfolio</title>
     </head>
     <body>
-        <h1 id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
+        <header><iframe width="100%" height="320" frameborder="0" src="https://brenno-calado.carto.com/builder/13d1f723-196f-4f8d-ae2d-e89894e7dbfe/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></header>
+        <h1 class="Montserrat" id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
         <img src="https://instagram.frec3-2.fna.fbcdn.net/v/t51.2885-19/s150x150/68746666_451035408822072_2468069619110248448_n.jpg?_nc_ht=instagram.frec3-2.fna.fbcdn.net&_nc_ohc=NImM_5qL-rgAX9rINjC&tp=25&oh=c087668d44a57576c6d3884b7034a860&oe=5FDDE53D" alt="O criador deste site posa para uma foto com um lenço de pescoço preto e a mata de Brennand como plano de fundo.">
-        <h2>💡 is the new black</h2>
-        <p>Brasileiro, criado pelos becos e ruas do Recife, Pernambuco.</p>
+        <p class="Montserrat">Brasileiro, criado pelos becos e ruas do Recife, Pernambuco.<br>&<br>
+        criado pelos becos e ruas da Internet</p>
         <br>
-        <p>&</p>
-        <br>
-        <p>Criado pelos becos e ruas da Internet</p>
-        <br>
-        <h3 id="habilidades">Habilidades</h3>
+        <div id="habilidades">
+        <h3>Habilidades</h3>
         <ul>
             <li>Inglês</li>
             <li><strong>Sistema de Informações Geográficas</strong></li>
@@ -28,6 +28,7 @@
             <li>Illustator</li>
             <li>Photoshop</li>
         </ul>
+        </div>
         <img src="caboclo2.png" alt="arte vetorial demonstrando um caboclo rural vestido de amarelo com estrelas em vermelho,cabeleira roxa, calça branca, lança colorida ao seu lado direito e flor colorida no canto esquerdo de sua boca" width="200px" id="arte">
         <h3 id="blogs">Links de sites curiosos:</h3>
         <br>
