Change title color, add highSkills weight and size, add img border-radius, change font colors,

--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
         <title>BCVMN Portfolio</title>
     </head>
     <body>
-        <header><iframe width="100%" height="320" frameborder="0" src="https://brenno-calado.carto.com/builder/13d1f723-196f-4f8d-ae2d-e89894e7dbfe/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></header>
-        <h1 class="Montserrat" id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
+        <header>
+            <iframe width="100%" height="320" frameborder="0" src="https://brenno-calado.carto.com/builder/13d1f723-196f-4f8d-ae2d-e89894e7dbfe/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>
+            </iframe>
+        </header>
+        <h1 class="Montserrat title-orange" id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
         <img src="https://instagram.frec3-2.fna.fbcdn.net/v/t51.2885-19/s150x150/68746666_451035408822072_2468069619110248448_n.jpg?_nc_ht=instagram.frec3-2.fna.fbcdn.net&_nc_ohc=NImM_5qL-rgAX9rINjC&tp=25&oh=c087668d44a57576c6d3884b7034a860&oe=5FDDE53D" alt="O criador deste site posa para uma foto com um lenço de pescoço preto e a mata de Brennand como plano de fundo.">
         <p class="Montserrat">Brasileiro, criado pelos becos e ruas do Recife, Pernambuco.<br>&<br>
         criado pelos becos e ruas da Internet</p>
         <br>
         <div id="habilidades">
-        <h3>Habilidades</h3>
+        <h3 class="title-orange">Habilidades</h3>
         <ul>
             <li>Inglês</li>
-            <li><strong>Sistema de Informações Geográficas</strong></li>
+            <li class="highSkill">QGIS</li>
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
             <li>Bash</li>
             <li>Excel</li>
-            <li>Illustator</li>
-            <li>Photoshop</li>
+            <li class="highSkill">Illustator</li>
+            <li class="highSkill">Photoshop</li>
         </ul>
         </div>
         <img src="caboclo2.png" alt="arte vetorial demonstrando um caboclo rural vestido de amarelo com estrelas em vermelho,cabeleira roxa, calça branca, lança colorida ao seu lado direito e flor colorida no canto esquerdo de sua boca" width="200px" id="arte">
-        <h3 id="blogs">Links de sites curiosos:</h3>
+        <h3 class="title-orange" id="blogs">Links de sites curiosos:</h3>
         <br>
         <a href="https://www.vox.com/a/maps-explain-the-middle-east#map-1" target="_blank">Vox</a>
         <p>Gostou do conteúdo? Dê um replay 👇🏽</p>
