--- a/index.html
+++ b/index.html
@@ -9,36 +9,44 @@
         <title>BCVMN Portfolio</title>
     </head>
     <body>
-        <header></header>
+        <div class="main-title">
         <h1 class="Montserrat title-orange" id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
-        <img src="https://instagram.frec3-2.fna.fbcdn.net/v/t51.2885-19/s150x150/68746666_451035408822072_2468069619110248448_n.jpg?_nc_ht=instagram.frec3-2.fna.fbcdn.net&_nc_ohc=NImM_5qL-rgAX9rINjC&tp=25&oh=c087668d44a57576c6d3884b7034a860&oe=5FDDE53D" alt="O criador deste site posa para uma foto com um lenço de pescoço preto e a mata de Brennand como plano de fundo.">
-        <p class="Montserrat">Brasileiro 🇧🇷 criado pelos becos e ruas do Recife, Pernambuco</p>
-        <ul>
-            <li>Fiz Bacharel em Geografia por ser apaixonado desde pequeno pelo Google Earth 🌎❤️</li>
-            <li>Fiz pesquisas sobre o mercado imobiliário🏙️🔍</li>
-            <li>Fundei a empresa júnior MapGeo na UFPE🗺️</li>
-            <li>Fiz coleta e analise de dados para uma pesquisa encomendada pela 99🚕</li>
-        </ul>
-        <br>
-        <div id="habilidades">
+        </div>
+        <header>
+        <div class="main-picture">
+            <img src="https://instagram.frec3-2.fna.fbcdn.net/v/t51.2885-19/s150x150/68746666_451035408822072_2468069619110248448_n.jpg?_nc_ht=instagram.frec3-2.fna.fbcdn.net&_nc_ohc=NImM_5qL-rgAX9rINjC&tp=25&oh=c087668d44a57576c6d3884b7034a860&oe=5FDDE53D" alt="O criador deste site posa para uma foto com um lenço de pescoço preto e a mata de Brennand como plano de fundo.">
+        </div>
+        <div class="description">
+            <p class="Montserrat">Brasileiro 🇧🇷 criado pelos becos e ruas do Recife, Pernambuco</p>
+            <ul>
+                <li>Bacharel em Geografia por ser apaixonado desde pequeno pelo Google Earth 🌎❤️</li>
+                <li>Pesquisas e mapeamentos sobre mercado imobiliário🏙️🔍</li>
+                <li>Participei da fundação da empresa júnior MapGeo na UFPE🗺️</li>
+                <li>Fiz coleta e analise de dados para uma pesquisa encomendada pela 99🚕</li>
+            </ul>
+        </div>
+        </header>
+        <div id="skills">
         <h2 class="title-orange">Habilidades</h2>
         <ul>
-            <li class="highSkill">Inglês</li>
-            <li class="highSkill">QGIS</li>
+            <li>Inglês</li>
+            <li>QGIS</li>
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
             <li>Bash</li>
-            <li class="highSkill">Excel</li>
-            <li class="highSkill">Illustator</li>
-            <li class="highSkill">Photoshop</li>
+            <li>Excel</li>
+            <li>Illustator</li>
+            <li>Photoshop</li>
         </ul>
         </div>
-        <h2 class="title-orange">Projetos</h2>
+        <div class="projects">
+        <h2 class="title-orange">Projects</h2>
         <iframe width="100%" height="520" frameborder="0" src="https://brenno-calado.carto.com/builder/b761291d-868e-474a-8f70-b5e02744948a/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>
         </iframe>
-        <br>
-        <img src="caboclo2.png" alt="arte vetorial demonstrando um caboclo rural vestido de amarelo com estrelas em vermelho,cabeleira roxa, calça branca, lança colorida ao seu lado direito e flor colorida no canto esquerdo de sua boca" width="200px" id="arte">
+        <img src="caboclo2.png" alt="arte vetorial demonstrando um caboclo rural vestido de amarelo com estrelas em vermelho,cabeleira roxa, calça branca, lança colorida ao seu lado direito e flor colorida no canto esquerdo de sua boca"  id="arte">
+        <img src="wallpaperbcvmn.png" alt="">
+        </div>
         <h2 class="title-orange" id="blogs">Links de sites curiosos:</h2>
         <br>
         <a href="https://www.vox.com/a/maps-explain-the-middle-east#map-1" target="_blank">Vox</a>
@@ -48,11 +56,13 @@
         <a href="https://bdgex.eb.mil.br/bdgex/">BDGEX - Exército Brasileiro</a>
         <br>
         <a href="https://earthengine.google.com/timelapse/">Timelapse de imagens de satélite</a>
+        <footer id="footer">
         <p>Gostou do conteúdo? Dê um replay 👇🏽</p>
         <br>
         <a href="#titulo">Início</a>
-        <a href="#habilidades">Habilidades</a>
+        <a href="#skills">Habilidades</a>
         <a href="#arte">Artes</a>
         <a href="#blogs">Links curiosos</a>
+        </footer>
     </body>
 </html>
