add script.js & fix css styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilo.css">
-    <title>BCVMN Portfolio</title>
+    <script src="script.js"></script>
+    <title>Portfolio do Brenno</title>
   </head>
   <body>
     <div class="main-title">
@@ -26,9 +27,9 @@
         </ul>
       </div>
     </header>
-    <div id="skills">
+    <div class="skills">
       <h2 class="title-orange">Habilidades</h2>
-      <ul>
+      <ul class ="skills">
         <li>Inglês</li>
         <li>QGIS</li>
         <li>HTML</li>
@@ -56,7 +57,7 @@
     <a href="https://bdgex.eb.mil.br/bdgex/">BDGEX - Exército Brasileiro</a>
     <br>
     <a href="https://earthengine.google.com/timelapse/">Timelapse de imagens de satélite</a>
-    <footer id="footer">
+    <footer class="footer">
       <p>Gostou do conteúdo? Dê um replay 👇🏽</p>
       <br>
       <a href="#titulo">Início</a>
