Organized estilo.css & arranged iframe to block

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
       </div>
     </header>
-    <div class="skills">
+    <div id="skills">
       <h2 class="title-orange">Habilidades</h2>
       <ul class ="skills">
         <li>Inglês</li>
@@ -43,7 +43,7 @@
     </div>
     <div class="projects">
       <h2 class="title-orange">Projects</h2>
-      <iframe width="100%" height="520" frameborder="0" src="https://brenno-calado.carto.com/builder/b761291d-868e-474a-8f70-b5e02744948a/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>
+      <iframe width="50%" height="520" frameborder="0" src="https://brenno-calado.carto.com/builder/b761291d-868e-474a-8f70-b5e02744948a/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>
       </iframe>
       <img src="caboclo2.png" alt="arte vetorial demonstrando um caboclo rural vestido de amarelo com estrelas em vermelho,cabeleira roxa, calça branca, lança colorida ao seu lado direito e flor colorida no canto esquerdo de sua boca"  id="arte">
       <img src="wallpaperbcvmn.png" alt="">
