Deleted Montserrat, changed main picture border color, added portfolio site to Readme file

--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
   <head>
     <meta lang="pt-br">
     <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilo.css">
     <script src="script.js"></script>
     <title>Portfolio do Brenno</title>
   </head>
   <body>
     <div class="main-title">
-    <h1 class="Montserrat title-orange" id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
+    <h1 class="title-orange" id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
     </div>
     <header>
       <div class="main-picture">
         <img src="perfil_insta.jpg" alt="O criador deste site posa para uma foto com um lenço preto no pescoço e a mata de Brennand como plano de fundo.">
       </div>
       <div class="description">
-        <p class="Montserrat">Brasileiro 🇧🇷 criado pelos becos e ruas do Recife, Pernambuco</p>
+        <p class="">Brasileiro 🇧🇷 criado pelos becos e ruas do Recife, Pernambuco</p>
         <ul>
           <li>Bacharel em Geografia por ser apaixonado desde pequeno pelo Google Earth 🌎❤️</li>
           <li>Pesquisas e mapeamentos sobre mercado imobiliário🏙️🔍</li>
@@ -45,7 +43,7 @@
       <h2 class="title-orange">Projects</h2>
       <iframe width="50%" height="520" frameborder="0" src="https://brenno-calado.carto.com/builder/b761291d-868e-474a-8f70-b5e02744948a/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>
       </iframe>
-      <img src="caboclo2.png" alt="arte vetorial demonstrando um caboclo rural vestido de amarelo com estrelas em vermelho,cabeleira roxa, calça branca, lança colorida ao seu lado direito e flor colorida no canto esquerdo de sua boca"  id="arte">
+      <img src="caboclo2.png" alt="arte vetorial demonstrando um caboclo rural vestido de amarelo com estrelas em vermelho, cabeleira roxa, calça branca, lança colorida ao seu lado direito e flor colorida no canto esquerdo de sua boca"  id="arte">
       <img src="wallpaperbcvmn.png" alt="">
     </div>
     <h2 class="title-orange" id="blogs">Links de sites curiosos:</h2>
