Revamp with new page icon, deleted projects, & turned page to dynamic with js

--- a/index.html
+++ b/index.html
@@ -6,62 +6,8 @@
     <link rel="stylesheet" href="estilo.css">
     <script src="script.js"></script>
     <title>Portfolio do Brenno</title>
+    <link rel="icon" href="pixelcaboclo.png">
   </head>
   <body>
-    <div class="main-title">
-    <h1 class="title-orange" id="titulo">Brenno Calado Vieira de Melo Nascimento</h1>
-    </div>
-    <header>
-      <div class="main-picture">
-        <img src="perfil_insta.jpg" alt="O criador deste site posa para uma foto com um lenço preto no pescoço e a mata de Brennand como plano de fundo.">
-      </div>
-      <div class="description">
-        <p class="">Brasileiro 🇧🇷 criado pelos becos e ruas do Recife, Pernambuco</p>
-        <ul>
-          <li>Bacharel em Geografia por ser apaixonado desde pequeno pelo Google Earth 🌎❤️</li>
-          <li>Pesquisas e mapeamentos sobre mercado imobiliário🏙️🔍</li>
-          <li>Participei da fundação da empresa júnior MapGeo na UFPE🗺️</li>
-          <li>Fiz coleta e analise de dados para uma pesquisa encomendada pela 99🚕</li>
-        </ul>
-      </div>
-    </header>
-    <div id="skills">
-      <h2 class="title-orange">Habilidades</h2>
-      <ul class ="skills">
-        <li>Inglês</li>
-        <li>QGIS</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Javascript</li>
-        <li>Bash</li>
-        <li>Excel</li>
-        <li>Illustator</li>
-        <li>Photoshop</li>
-      </ul>
-    </div>
-    <div class="projects">
-      <h2 class="title-orange">Projects</h2>
-      <iframe width="50%" height="520" frameborder="0" src="https://brenno-calado.carto.com/builder/b761291d-868e-474a-8f70-b5e02744948a/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>
-      </iframe>
-      <img src="caboclo2.png" alt="arte vetorial demonstrando um caboclo rural vestido de amarelo com estrelas em vermelho, cabeleira roxa, calça branca, lança colorida ao seu lado direito e flor colorida no canto esquerdo de sua boca"  id="arte">
-      <img src="wallpaperbcvmn.png" alt="">
-    </div>
-    <h2 class="title-orange" id="blogs">Links de sites curiosos:</h2>
-    <br>
-    <a href="https://www.vox.com/a/maps-explain-the-middle-east#map-1" target="_blank">Vox</a>
-    <br>
-    <a href="https://malariaatlas.org/explorer/#/">Malaria Atlas Project</a>
-    <br>
-    <a href="https://bdgex.eb.mil.br/bdgex/">BDGEX - Exército Brasileiro</a>
-    <br>
-    <a href="https://earthengine.google.com/timelapse/">Timelapse de imagens de satélite</a>
-    <footer class="footer">
-      <p>Gostou do conteúdo? Dê um replay 👇🏽</p>
-      <br>
-      <a href="#titulo">Início</a>
-      <a href="#skills">Habilidades</a>
-      <a href="#arte">Artes</a>
-      <a href="#blogs">Links curiosos</a>
-    </footer>
   </body>
 </html>
